added more to home page

--- a/index.html
+++ b/index.html
@@ -11,6 +11,22 @@
             </div>
         </header>
     <body>
-        <marquee>AUDIO Ū - AUDIO Ū - AUDIO Ū - AUDIO Ū - AUDIO Ū - AUDIO Ū - AUDIO Ū - </marquee>
+        <div class="scroll">
+            <p class="pscroll">  - AUDIO Ū - AUDIO Ū - AUDIO Ū - AUDIO Ū - </p>
+        </div>
+
+        <div class="menu">
+            <div class="col">
+                <button class="menubut">Audio Services</button>
+                <button class="menubut">Artist Hub</button>
+            </div>
+            <div class="imgcol">
+                <img class="menustulogo" src="images/The Stū Circle Sticker Contrast.png" alt="">
+            </div>
+            <div class=" col">
+                <button class="menubut">Book Session</button>
+                <button class="menubut">About</button>
+            </div>
+        </div>
     </body>
 </html>
